--- a/ADWebApplication/Views/AdminRoutePlanning/Index.cshtml
+++ b/ADWebApplication/Views/AdminRoutePlanning/Index.cshtml
@@ -281,10 +281,8 @@ else
             L.control.zoom({ position: 'bottomright' }).addTo(map);
 
             /* crossOrigin = TRUE, allow map api on cloud */
-            L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-                crossOrigin: true,
-                maxZoom: 19,
-                attribution: "© OpenStreetMap contributors"
+            L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+                attribution: '©OpenStreetMap'
             }).addTo(map);
 
 
